--- a/pages/router/index.wxss
+++ b/pages/router/index.wxss
@@ -781,7 +781,6 @@
 .dialog-icon {
   width: 140rpx;
   height: 140rpx;
-  background: linear-gradient(135deg, #58cc02 0%, #7ed321 100%);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -803,6 +802,12 @@
     transform: scale(1);
     opacity: 1;
   }
+}
+
+.dialog-icon-image {
+  width: 100rpx;
+  height: 100rpx;
+  display: block;
 }
 
 .dialog-emoji {
