--- a/pages/zuoye/index.wxml
+++ b/pages/zuoye/index.wxml
@@ -66,7 +66,7 @@
           <view class="input-header">
             <text class="input-label">请输入</text>
           </view>
-          <textarea class="input-textarea" placeholder="请在此输入内容" placeholder-style="color: #ffffff;" value="{{answer}}" bindinput="onInputChange" maxlength="500" auto-height />
+          <textarea class="input-textarea" placeholder="{{currentProblem.placeholder}}" placeholder-style="color: #ffffff;" value="{{answer}}" bindinput="onInputChange" maxlength="500" auto-height />
         </view>
       </view>
     </block>
