--- a/pages/learning/learning.wxml
+++ b/pages/learning/learning.wxml
@@ -41,7 +41,7 @@
         <view class="course-info">
           <view class="course-meta">
             <image class="course-image" src="{{item.icon}}" data-course-id="{{item.id}}" />
-            <text class="course-time">{{item.title}}</text>
+            <view class="course-time"><text>{{item.title}}</text></view>
           </view>
         </view>
         <view class="course-actions">
